adjusted twitter buttons

--- a/buttons.html
+++ b/buttons.html
@@ -37,12 +37,16 @@
    height:36px;
    width:80px;
    border-radius:40px;
+   font-weight:bold;
+   font-size:15px;
+   cursor:pointer;
+   margin-left:8px;
    
  }
   </style>
   <button class="subscribe-button">subscribe </button>
   <button class="join-button">Join</button>
-  <button class="tweet-button">tweet</button>
+  <button class="tweet-button">Tweet</button>
 </body>
 
 </html>
