--- a/buttons.html
+++ b/buttons.html
@@ -43,6 +43,19 @@
    margin-left:8px;
    
  }
+ .subscribe-button:hover{
+   opacity:0.8;
+ }
+ .subscribe-button:active:{
+   opacity: 0.5;
+ }
+ .join-button:hover{
+   color:white;
+   background-color:rgb(41,128,211);
+ }
+ .join-button:active{
+   opacity:0.7;
+ }
   </style>
   <button class="subscribe-button">subscribe </button>
   <button class="join-button">Join</button>
