--- a/buttons.html
+++ b/buttons.html
@@ -18,6 +18,7 @@
       border-radius:2px;
       cursor:pointer;
       margin-right:8px;
+      transition: opacity 0.15s;
     }
  .join-button{
     background-color: white;
