added transition to join button

--- a/buttons.html
+++ b/buttons.html
@@ -30,6 +30,7 @@
     width:62px;
     border-radius:2px;
     cursor: pointer ;
+    transition: background-color 0.15s,color 1s;
  }
  .tweet-button{
    background-color:rgb(41,118,211);
