--- a/buttons.html
+++ b/buttons.html
@@ -43,7 +43,7 @@
    font-size:15px;
    cursor:pointer;
    margin-left:8px;
-   
+   box-shadow:10px 10px 10px rgba(2,158,255,0.15);
  }
  .subscribe-button:hover{
    opacity:0.8;
