--- a/buttons.html
+++ b/buttons.html
@@ -13,12 +13,17 @@
       background-color:rgb(200,0,0);
       color:white;
       border:none;
-      height:36px;
-      width:105px;
+      margin-left:30px;
+      margin-right:30px;
+      padding-top: 10px;
+      padding-bottom:10px;
+      padding-right:20px;
+      padding-left:20px;
       border-radius:2px;
       cursor:pointer;
       margin-right:8px;
       transition: opacity 0.15s;
+      vertical-align:top;
     }
  .join-button{
     background-color: white;
@@ -36,8 +41,11 @@
    background-color:rgb(41,118,211);
    color: white;
    border:none;
-   height:36px;
-   width:80px;
+   vertical-align:top;
+   padding-top: 9px;
+   padding-bottom:9px;
+   padding-left:16px;
+   padding-right:16px;
    border-radius:40px;
    font-weight:bold;
    font-size:15px;
